session 로그인 구현

--- a/src/main/resources/templates/default-layout.html
+++ b/src/main/resources/templates/default-layout.html
@@ -6,7 +6,7 @@
     <th:block th:replace="fragments/config::configFragment"></th:block>
 </head>
 <body>
-    <th:block th:replace="framents/header::headerFrament"></th:block>
+    <th:block th:replace="fragments/header::headerFragment"></th:block>
     <th:block layout:fragment="content"></th:block>
 </body>
 </html>
