--- a/src/main/resources/templates/pages/login/login.html
+++ b/src/main/resources/templates/pages/login/login.html
@@ -7,8 +7,8 @@
 <body>
     <div>
         <form action="login" method="post">
-            <input type="text" name="user_id" />
-            <input type="password" name="user_password"/>
+            <input type="text" name="loginId" />
+            <input type="password" name="loginPassword"/>
             <button>로그인</button>
         </form>
     </div>
