--- a/src/main/resources/templates/pages/tomatoMain.html
+++ b/src/main/resources/templates/pages/tomatoMain.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{index}"
+      layout:decorate="~{default-layout}"
 >
 <head>
     <meta charset="UTF-8">
@@ -10,6 +10,7 @@
 <body>
 <div layout:fragment="content">
     <h2>Hello, World!</h2>
+    <h2 th:text="${sessionUserId}"></h2>
 </div>
 </body>
 </html>
