--- a/src/main/resources/templates/pages/tomatoMain.html
+++ b/src/main/resources/templates/pages/tomatoMain.html
@@ -10,7 +10,7 @@
 <body>
 <div layout:fragment="content">
     <h2>Hello, World!</h2>
-    <h2 th:text="${sessionUserId}"></h2>
+    <h2 th:text="${sessionUserName}"></h2>
 </div>
 </body>
 </html>
