--- a/src/main/resources/templates/pages/login/login.html
+++ b/src/main/resources/templates/pages/login/login.html
@@ -3,17 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>TOMATO : 로그인</title>
+    <link th:href="@{/css/common.css}" rel="stylesheet"/>
+    <link th:href="@{/css/login.css}" rel="stylesheet"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script type="text/javascript" th:src="@{/js/login/login.js}"></script>
 </head>
 <body>
     <input type="hidden" th:value="${result}" id="loginStatus" />
-    <div>
-        <form action="login" method="post">
-            <input type="text" name="loginId" autocomplete="off" />
-            <input type="password" name="loginPassword"/>
-            <button>로그인</button>
-        </form>
+    <div id="loginWrap">
+        <div id="loginInner">
+            <div id="testImg"></div>
+            <h3 id="loginTitle">TOMATO welcomes you</h3>
+            <form action="login" method="post">
+                <div>
+                    <input type="text" id="loginId" class="login_input" name="loginId" autocomplete="off" />
+                </div>
+                <div>
+                    <input type="password" id="loginPassword" class="login_input" name="loginPassword"/>
+                </div>
+                <button class="submit_button">로그인</button>
+            </form>
+        </div>
     </div>
 </body>
 </html>
